syntax = "proto3";

package proto;

option go_package = "github.com/ArquitecturaDeSistemas/taskmicroservice/src/proto";

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse);
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse);
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse);
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse);
}

message CreateTaskRequest {
  string titulo = 1;
  string descripcion = 2;
  string fechaInicio = 3;
  string fechaTermino = 4;
  string userId = 5;
}

message CreateTaskResponse {
  string id = 1;
  string titulo = 2;
  string descripcion = 3;
  string fechaInicio = 4;
  string fechaTermino = 5;
  string userId = 6;
}

message GetTaskRequest {
  string id = 1;
}

message GetTaskResponse {
  string titulo = 1;
  string descripcion = 2;
  string fechaInicio = 3;
  string fechaTermino = 4;
  string userId = 5;
  string id = 6;
}

message UpdateTaskRequest {
  string titulo = 1;
  string descripcion = 2;
  string fechaInicio = 3;
  string fechaTermino = 4;
  string userId = 5;
  string id = 6;
}

message UpdateTaskResponse {
  string titulo = 1;
  string descripcion = 2;
  string fechaInicio = 3;
  string fechaTermino = 4;
  string userId = 5;
  string id = 6;
}

message DeleteTaskRequest {
  string id = 1;
}

message DeleteTaskResponse {
  string mensaje = 1;
}

message ListTasksRequest {
}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message Task{
  string titulo = 1;
  string descripcion = 2;
  string fechaInicio = 3;
  string fechaTermino = 4;
  string userId = 5;
  string id = 6;
}

